fixed jumping bug on rotation, now have to figure out how to stop the movement

--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,7 @@ body {
 
 .abt-grid img:nth-child(2) {
   border-color: #02C39A;
-  transform: rotate(45deg);
+  /* transform: rotate(45deg); */
   grid-column: 2;
   justify-self: end;
   align-self: end;
